# claude-context-local

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
.beads/: issues.jsonl
.github/workflows/: ci.yml
src/claude_context_local/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_helpers.py  test_tools.py
