[project]
name = "claude-context-local"
version = "0.1.1"
description = "Local semantic code search MCP server for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Denis Tazhate", email = "hate@tazhate.ru" },
]
keywords = ["mcp", "claude", "code-search", "embeddings", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
claude-context-local = "claude_context_local.__main__:main"

[project.urls]
Homepage = "https://github.com/tazhate/claude-context-local"
Repository = "https://github.com/tazhate/claude-context-local"
Issues = "https://github.com/tazhate/claude-context-local/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
